--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# TeX gitignore
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -263,3 +265,18 @@ TSWLatexianTemp*
 
 # standalone packages
 *.sta
+
+# vscode gitignore
+
+.vscode/*
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# Personal gitignore
+TODO.md
