--- a/.github/workflows/zip-release.yml
+++ b/.github/workflows/zip-release.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Archive Release
+      - name: Zip release
         uses: thedoctor0/zip-release@master
         with:
           type: "zip"
@@ -18,7 +18,8 @@ jobs:
             .gitignore
             LICENSE
             README.md
-      - uses: ncipollo/release-action@v1
+      - name: Create prerelease
+        uses: ncipollo/release-action@v1
         with:
           artifacts: "tudelft-report.zip"
           prerelease: true
