--- a/.gitignore
+++ b/.gitignore
@@ -554,11 +554,10 @@ TSWLatexianTemp*
 # .loc
 *.loc
 
-
 # vscode gitignore
 
 .vscode/*
-# !.vscode/settings.json
+!.vscode/settings.json
 # !.vscode/tasks.json
 # !.vscode/launch.json
 # !.vscode/extensions.json
