--- a/.gitignore
+++ b/.gitignore
@@ -558,7 +558,7 @@ TSWLatexianTemp*
 
 .vscode/*
 !.vscode/settings.json
-# !.vscode/tasks.json
+!.vscode/tasks.json
 # !.vscode/launch.json
 # !.vscode/extensions.json
 *.code-workspace
@@ -568,3 +568,5 @@ TSWLatexianTemp*
 
 # Personal gitignore
 TODO.md
+/archive
+/build
