--- a/.github/workflows/zip-release.yml
+++ b/.github/workflows/zip-release.yml
@@ -1,8 +1,8 @@
 name: Release
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 jobs:
